--- a/photo-server/src/main/resources/application.properties
+++ b/photo-server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=photo-server
 spring.datasource.url=jdbc:postgresql://localhost:5432/photo_db
 spring.datasource.username=postgres
-spring.datasource.password=AlbertoMoraviA1934!
+spring.datasource.password=cs-vpopa
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
